# Grass-Detection

./: CMakeLists.txt  Samples.txt  Samples2.model  Samples2.txt  mainpage.dox  manifest.xml
include/libsvm/: svmWrapper.hpp
samples/1/: Samples.txt  Samples2.model  Samples2.txt
samples/2/: Samples.txt  Samples2.model  Samples2.txt
src/: generateSamples.cpp  imagePrediction.cpp  predictModel.cpp  save_test.cpp  test1.cpp  trainModel.cpp
src/libsvm/: svmWrapper.cpp
